--- a/DESTAP/appsettings.json
+++ b/DESTAP/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KNSITSWEB;Database=db_DESTAP;User Id=sa_deniz;Password=147258deniz;"
+    //"DefaultConnection": "Server=KNSITSWEB;Database=db_DESTAP;User Id=sa_deniz;Password=147258deniz;"
+    "DefaultConnection": "Server=./;Database=db_DESTAP;User Id=sa;Password=1342*;"
   }
 }
