--- a/DESTAP/appsettings.json
+++ b/DESTAP/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KNSITSWEB;Database=db_DESTAP;User Id=sa_deniz;Password=147258deniz;"
+    "DefaultConnection": "Server=HYBRIT\\SQLEXPRESS;Database=db_DESTAP;User Id=sa_deniz;Password=147258deniz;"
   }
 }
